<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/excercise_box"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/workout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginBottom="15dp"
        android:text="Workout Sample" />

    <TextView
        android:id="@+id/workout_item_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/workout_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_btn_label"
            android:textSize="15dp"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/workout_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btn_label"
            android:textSize="15dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/workout_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn_label"
            android:textSize="15dp"/>

    </LinearLayout>

</LinearLayout>