<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutDoneActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/done"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        android:layout_marginVertical="30dp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/you_did_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_did_textView"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/stair_climber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Stair Climber"
            android:textColor="#000000"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/total_elapsed_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_elapsed_textView"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/total_elapsed_time_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="45:17"
            android:textColor="#000000"
            android:textSize="35sp" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            app:srcCompat="@android:drawable/checkbox_on_background"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/streaks_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="3 weeks in a row!"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/woroutDoneShareButton"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/share"
            android:textSize="20dp"
            android:onClick="onClickShare" />

    </LinearLayout>

</LinearLayout>