<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutPauseActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/paused"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/paused"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        android:layout_marginVertical="50dp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/stair_climber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Stair Climber"
            android:textColor="#000000"
            android:textSize="35sp" />

        <Button
            android:id="@+id/skip_workout"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/skip_this_workout"
            android:textSize="20dp"
            android:onClick="onClickSkipThisWorkout"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/greenplay"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:onClick="onClickResumeWorkout"/>

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textSize="20dp"
        android:textColor="#ff0000"
        android:layout_gravity="center"
        android:onClick="onClickQuit"/>
</LinearLayout>