<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/excercise_box"
    android:gravity="center"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="15dp"
        android:text="Exercise Sample" />

    <LinearLayout
        android:id="@+id/exercise_not_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exercise_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/exercise_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_btn_label"
                android:textSize="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_view"
                android:textColor="#FFF"/>
            <Button
                android:id="@+id/exercise_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_btn_label"
                android:textSize="15dp"
                android:background="@drawable/button_view"
                android:textColor="#FFF"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exercise_edit_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/exercise_edit_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_btn_label"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>